--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         </div>
 
         <script src="script.js"></script>
+        <script src="https://unpkg.com/dexie/dist/dexie.min.js"></script>
 </body>
 
 </html>
