Agrego filtro por Ubicación

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
         <div class="filter-section">
             <h2>Filtrar Stock</h2>
-            <div class="filter-controls">
-                <input type="text" id="filter-proveedor" placeholder="Filtrar por Proveedor">
-                <input type="text" id="filter-codigo" placeholder="Filtrar por Código">
-                <input type="text" id="filter-descripcion" placeholder="Filtrar por Descripción">
-                <button id="clear-filters-btn">Limpiar Filtros</button>
-            </div>
+        <div class="filter-controls">
+            <input type="text" id="filter-proveedor" placeholder="Proveedor">
+            <input type="text" id="filter-codigo" placeholder="Código">
+            <input type="text" id="filter-descripcion" placeholder="Descripción">
+            <input type="text" id="filter-ubicacion" placeholder=" Ubicación">
+            <button id="clear-filters-btn">Limpiar Filtros</button>
+        </div>
         </div>
 
         <div class="stock-display-section">
